# cookiecutter-basic-pylib

./: LICENSE  README.md  cookiecutter.json  pyproject.toml
hooks/: post_gen_project.py
{{cookiecutter.__project_name_kebab}}/: .gitignore  LICENSE  Makefile  pyproject.toml
{{cookiecutter.__project_name_kebab}}/.github/workflows/: triggered_by_pr.yml  triggered_by_tag.yml
{{cookiecutter.__project_name_kebab}}/tests/: test_{{cookiecutter.__project_name_snake}}.py
{{cookiecutter.__project_name_kebab}}/{{cookiecutter.__project_name_snake}}/: {{cookiecutter.__project_name_snake}}.py
