[build-system]
requires = ["setuptools>=46", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "cookiecutter_basic_pylib"
description = "Cookiecutter template for a base library python package"
readme = "README.md"
urls.repository = "https://github.com/treai-rnd/cookiecutter-basic-pylib"
authors = [{ name = "TRE Altamira", email = "rand@tre-altamira.com" }]
license = { file = "LICENSE" }

dynamic = ["version"]  # Version will be set by setuptools_scm according to git tag
requires-python = ">=3.10"

dependencies = [
	"cookiecutter",
]
optional-dependencies.dev = [
]
